Add the type list type duplication check to the lint #79

--- a/Makefile.am
+++ b/Makefile.am
@@ -16,13 +16,16 @@ SUBDIRS = \
 EXTRA_DIST = bobura.sln bobura_config.h-original TODO Doxyfile
 
 .PHONY: lint
-lint: lint-includes lint-test-cases
+lint: lint-includes lint-test-cases lint-type-list-type-duplication
 
 lint-includes: $(top_srcdir)/lib/tetengo2/tools
 	$(top_srcdir)/lib/tetengo2/tools/check_includes.sh $(top_srcdir)
 
 lint-test-cases: $(top_srcdir)/lib/tetengo2/tools
 	$(top_srcdir)/lib/tetengo2/tools/check_test_cases.sh $(top_srcdir) silent
+
+lint-type-list-type-duplication: $(top_srcdir)/lib/tetengo2/tools
+	$(top_srcdir)/lib/tetengo2/tools/check_type_list_type_duplication.sh $(top_srcdir)
 
 $(top_srcdir)/lib/tetengo2/tools:
 	git submodule update --init
