--- a/Makefile.am
+++ b/Makefile.am
@@ -18,18 +18,26 @@ EXTRA_DIST = bobura.sln bobura_config.h-original TODO Doxyfile
 .PHONY: lint
 lint: lint-includes lint-test-cases lint-type-list-type-duplication
 
-lint-includes: $(top_srcdir)/lib/tetengo2/tools
-	$(top_srcdir)/lib/tetengo2/tools/check_includes.sh $(top_srcdir)
+lint-includes: $(top_srcdir)/lib/tetengo2/tools/check_includes.sh
+	$< $(top_srcdir)
 
-lint-test-cases: $(top_srcdir)/lib/tetengo2/tools
-	$(top_srcdir)/lib/tetengo2/tools/check_test_cases.sh $(top_srcdir) silent
-
-lint-type-list-type-duplication: $(top_srcdir)/lib/tetengo2/tools
-	$(top_srcdir)/lib/tetengo2/tools/check_type_list_type_duplication.sh $(top_srcdir)
-
-$(top_srcdir)/lib/tetengo2/tools:
+$(top_srcdir)/lib/tetengo2/tools/check_includes.sh:
 	git submodule update --init
-	git submodule foreach 'git checkout master && git pull'
+	git submodule foreach 'git checkout -f master && git pull -p'
+
+lint-test-cases: $(top_srcdir)/lib/tetengo2/tools/check_test_cases.sh
+	$< $(top_srcdir) silent
+
+$(top_srcdir)/lib/tetengo2/tools/check_test_cases.sh:
+	git submodule update --init
+	git submodule foreach 'git checkout -f master && git pull -p'
+
+lint-type-list-type-duplication: $(top_srcdir)/lib/tetengo2/tools/check_type_list_type_duplication.sh
+	$< $(top_srcdir)
+
+$(top_srcdir)/lib/tetengo2/tools/check_type_list_type_duplication.sh:
+	git submodule update --init
+	git submodule foreach 'git checkout -f master && git pull -p'
 
 .PHONY: doc
 doc:
