--- a/bobura_core/include/bobura/Makefile.am
+++ b/bobura_core/include/bobura/Makefile.am
@@ -6,6 +6,7 @@ extra_headers = \
     0namespace.dox \
     about_dialog.h \
     application.h \
+    application_traits.h \
     command/0namespace.dox \
     command/about.h \
     command/command_base.h \
