--- a/bobura_core/bobura_core.vcxproj
+++ b/bobura_core/bobura_core.vcxproj
@@ -102,6 +102,7 @@
     <ClInclude Include="include\bobura\0namespace.dox" />
     <ClInclude Include="include\bobura\about_dialog.h" />
     <ClInclude Include="include\bobura\application.h" />
+    <ClInclude Include="include\bobura\application_traits.h" />
     <ClInclude Include="include\bobura\command\0namespace.dox" />
     <ClInclude Include="include\bobura\command\about.h" />
     <ClInclude Include="include\bobura\command\command_base.h" />
