Create bobura::main_window_menu_builder_traits #82

--- a/bobura_core/include/bobura/Makefile.am
+++ b/bobura_core/include/bobura/Makefile.am
@@ -43,6 +43,7 @@ extra_headers = \
     load_save/traits.h \
     main_window.h \
     main_window_menu_builder.h \
+    main_window_menu_builder_traits.h \
     main_window_traits.h \
     message/0namespace.dox \
     message/about_dialog.h \
