--- a/bobura_core/bobura_core.vcxproj
+++ b/bobura_core/bobura_core.vcxproj
@@ -139,6 +139,7 @@
     <ClInclude Include="include\bobura\load_save\traits.h" />
     <ClInclude Include="include\bobura\main_window.h" />
     <ClInclude Include="include\bobura\main_window_menu_builder.h" />
+    <ClInclude Include="include\bobura\main_window_menu_builder_traits.h" />
     <ClInclude Include="include\bobura\main_window_traits.h" />
     <ClInclude Include="include\bobura\message\0namespace.dox" />
     <ClInclude Include="include\bobura\message\about_dialog.h" />
