Enable the bobura_core library build on UNIX #82

--- a/bobura_core/include/bobura/Makefile.am
+++ b/bobura_core/include/bobura/Makefile.am
@@ -2,12 +2,10 @@
 # Copyright (C) 2007-2014 kaoru
 # $Id$
 
-extra_headers = \
-    0namespace.dox \
+pkg_headers = \
     about_dialog.h \
     application.h \
     application_traits.h \
-    command/0namespace.dox \
     command/about.h \
     command/command_base.h \
     command/exit.h \
@@ -35,7 +33,6 @@ extra_headers = \
     dialog_traits.h \
     file_property_dialog.h \
     font_color_dialog.h \
-    load_save/0namespace.dox \
     load_save/confirm_file_save.h \
     load_save/load_from_file.h \
     load_save/new_file.h \
@@ -45,7 +42,6 @@ extra_headers = \
     main_window_menu_builder.h \
     main_window_menu_builder_traits.h \
     main_window_traits.h \
-    message/0namespace.dox \
     message/about_dialog.h \
     message/diagram_picture_box.h \
     message/diagram_selection_observer_set.h \
@@ -66,7 +62,6 @@ extra_headers = \
     timetable_model.h \
     train_kind_dialog.h \
     type_list.h \
-    view/0namespace.dox \
     view/diagram/0namespace.dox \
     view/diagram/header.h \
     view/diagram/item.h \
@@ -79,4 +74,12 @@ extra_headers = \
     view/diagram/zoom.h \
     view/scale_list.h
 
+extra_headers = \
+    0namespace.dox \
+    command/0namespace.dox \
+    load_save/0namespace.dox \
+    message/0namespace.dox \
+    view/0namespace.dox
+
+nobase_pkginclude_HEADERS = $(pkg_headers)
 EXTRA_DIST = $(extra_headers)
