--- a/bobura_core/test/Makefile.am
+++ b/bobura_core/test/Makefile.am
@@ -47,6 +47,8 @@ EXTRA_DIST = $(extra_headers) $(extra_sources)
 
 TESTS = bobura_core.test
 
+bobura_core_test_DEPENDENCIES = \
+    $(top_builddir)/bobura_core/src/libbobura_core.a
 bobura_core_test_CPPFLAGS = \
     -I$(top_srcdir)/bobura_core/include \
     -I$(top_srcdir)/bobura_model/include \
@@ -62,5 +64,10 @@ bobura_core_test_SOURCES = $(headers) $(sources)
 
 $(top_builddir)/precompiled/precompiled.h.gch: $(top_srcdir)/precompiled/precompiled.h
 	pushd $(top_builddir)/precompiled; \
+	$(MAKE) all; \
+	popd
+
+$(top_builddir)/bobura_core/src/libbobura_core.a:
+	pushd $(top_builddir)/libbobura_core/src; \
 	$(MAKE) all; \
 	popd
