--- a/vsprops/bobura_core.test.props
+++ b/vsprops/bobura_core.test.props
@@ -20,7 +20,7 @@ echo Skipping the unit test...
     </PostBuildEvent>
     <Link>
       <AdditionalLibraryDirectories>$(OutDir);%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
-      <AdditionalDependencies>bobura_core.lib;tetengo2.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalDependencies>gdiplus.lib;bobura_core.lib;tetengo2.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup />
