--- a/bobura/res/Makefile.am
+++ b/bobura/res/Makefile.am
@@ -10,7 +10,5 @@ EXTRA_DIST = \
     win32/bobura_app.ico \
     win32/btt_file.ico \
     win32/bttbz2_file.ico \
-    win32/COMCTL32.DLL.Win32.manifest \
-    win32/COMCTL32.DLL.x64.manifest \
-    win32/high_dpi.manifest \
+    win32/bobura.exe.manifest \
     win32/resource.h
