--- a/setup/res/Makefile.am
+++ b/setup/res/Makefile.am
@@ -3,4 +3,7 @@
 # $Id$
 
 EXTRA_DIST = \
-    win32/setup.rc
+    win32/setup.rc \
+    win32/setup_app.ico \
+    win32/setup.exe.manifest \
+    win32/resource.h
