--- a/vsprops/bobura_core.test.props
+++ b/vsprops/bobura_core.test.props
@@ -23,7 +23,7 @@ echo Skipping the unit test...
       <AdditionalDependencies>comctl32.lib;gdiplus.lib;d2d1.lib;dwrite.lib;bobura_core.lib;tetengo2.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
     <Manifest>
-      <AdditionalManifestFiles>$(ProjectDir)res.test\win32\COMCTL32.DLL.$(PlatformName).manifest %(AdditionalManifestFiles)</AdditionalManifestFiles>
+      <AdditionalManifestFiles>$(ProjectDir)res.test\win32\$(TargetFileName).manifest %(AdditionalManifestFiles)</AdditionalManifestFiles>
     </Manifest>
   </ItemDefinitionGroup>
   <ItemGroup />
