--- a/bobura_core/bobura_core.test.vcxproj
+++ b/bobura_core/bobura_core.test.vcxproj
@@ -103,12 +103,34 @@
     </ClCompile>
     <ClCompile Include="test\master.cpp" />
     <ClCompile Include="test\test_bobura.about_dialog.cpp" />
+    <ClCompile Include="test\test_bobura.application.cpp" />
+    <ClCompile Include="test\test_bobura.command.about.cpp" />
+    <ClCompile Include="test\test_bobura.command.command_base.cpp" />
+    <ClCompile Include="test\test_bobura.command.exit.cpp" />
+    <ClCompile Include="test\test_bobura.command.file_property.cpp" />
+    <ClCompile Include="test\test_bobura.command.font_color.cpp" />
+    <ClCompile Include="test\test_bobura.command.horizontally_zoom_in.cpp" />
+    <ClCompile Include="test\test_bobura.command.horizontally_zoom_out.cpp" />
+    <ClCompile Include="test\test_bobura.command.load_from_file.cpp" />
+    <ClCompile Include="test\test_bobura.command.new_file.cpp" />
+    <ClCompile Include="test\test_bobura.command.nop.cpp" />
+    <ClCompile Include="test\test_bobura.command.open_www_tetengo_org.cpp" />
+    <ClCompile Include="test\test_bobura.command.save_to_file.cpp" />
+    <ClCompile Include="test\test_bobura.command.set.cpp" />
+    <ClCompile Include="test\test_bobura.command.set_horizontal_scale.cpp" />
+    <ClCompile Include="test\test_bobura.command.set_vertical_scale.cpp" />
+    <ClCompile Include="test\test_bobura.command.train_kind.cpp" />
+    <ClCompile Include="test\test_bobura.command.vertically_zoom_in.cpp" />
     <ClCompile Include="test\test_bobura.diagram_picture_box.cpp" />
     <ClCompile Include="test\test_bobura.diagram_view.cpp" />
+    <ClCompile Include="test\test_bobura.file_property_dialog.cpp" />
+    <ClCompile Include="test\test_bobura.font_color_dialog.cpp" />
     <ClCompile Include="test\test_bobura.load_save.confirm_file_save.cpp" />
     <ClCompile Include="test\test_bobura.load_save.load_from_file.cpp" />
     <ClCompile Include="test\test_bobura.load_save.new_file.cpp" />
     <ClCompile Include="test\test_bobura.load_save.save_to_file.cpp" />
+    <ClCompile Include="test\test_bobura.main_window.cpp" />
+    <ClCompile Include="test\test_bobura.main_window_menu_builder.cpp" />
     <ClCompile Include="test\test_bobura.message.about_dialog.cpp" />
     <ClCompile Include="test\test_bobura.message.diagram_picture_box.cpp" />
     <ClCompile Include="test\test_bobura.message.diagram_selection_observer_set.cpp" />
@@ -121,9 +143,11 @@
     <ClCompile Include="test\test_bobura.message.timetable_model.cpp" />
     <ClCompile Include="test\test_bobura.message.timetable_model_observer_set.cpp" />
     <ClCompile Include="test\test_bobura.message.train_kind_dialog.cpp" />
+    <ClCompile Include="test\test_bobura.oudia_diagram_dialog.cpp" />
     <ClCompile Include="test\test_bobura.property_bar.cpp" />
     <ClCompile Include="test\test_bobura.settings.cpp" />
     <ClCompile Include="test\test_bobura.timetable_model.cpp" />
+    <ClCompile Include="test\test_bobura.train_kind_dialog.cpp" />
     <ClCompile Include="test\test_bobura.view.diagram.header.cpp" />
     <ClCompile Include="test\test_bobura.view.diagram.item.cpp" />
     <ClCompile Include="test\test_bobura.view.diagram.selection.cpp" />
@@ -131,6 +155,7 @@
     <ClCompile Include="test\test_bobura.view.diagram.time_line.cpp" />
     <ClCompile Include="test\test_bobura.view.diagram.train_line.cpp" />
     <ClCompile Include="test\test_bobura.view.diagram.utility.cpp" />
+    <ClCompile Include="test\test_bobura.view.diagram.zoom.cpp" />
     <ClCompile Include="test\test_bobura.view.scale_list.cpp" />
   </ItemGroup>
   <ItemGroup>
