--- a/bobura_model/bobura_model.vcxproj
+++ b/bobura_model/bobura_model.vcxproj
@@ -25,6 +25,7 @@
     <ClInclude Include="include\bobura\model\serializer\0namespace.dox" />
     <ClInclude Include="include\bobura\model\serializer\bzip2_reader.h" />
     <ClInclude Include="include\bobura\model\serializer\bzip2_writer.h" />
+    <ClInclude Include="include\bobura\model\serializer\exec_json_reading_task.h" />
     <ClInclude Include="include\bobura\model\serializer\json_reader.h" />
     <ClInclude Include="include\bobura\model\serializer\json_writer.h" />
     <ClInclude Include="include\bobura\model\serializer\oudia_reader.h" />
