--- a/bobura_model/test/Makefile.am
+++ b/bobura_model/test/Makefile.am
@@ -13,6 +13,7 @@ sources = \
     test_bobura.model.message.timetable_observer_set.cpp \
     test_bobura.model.serializer.bzip2_reader.cpp \
     test_bobura.model.serializer.bzip2_writer.cpp \
+    test_bobura.model.serializer.exec_json_reading_task.cpp \
     test_bobura.model.serializer.json_reader.cpp \
     test_bobura.model.serializer.json_writer.cpp \
     test_bobura.model.serializer.oudia_reader.cpp \
