--- a/bobura_core/bobura_core.vcxproj.filters
+++ b/bobura_core/bobura_core.vcxproj.filters
@@ -353,5 +353,8 @@
     <ClCompile Include="src\bobura.load_save.confirm_file_save.cpp">
       <Filter>sources\bobura\load_save</Filter>
     </ClCompile>
+    <ClCompile Include="src\bobura.load_save.load_from_file.cpp">
+      <Filter>sources\bobura\load_save</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
