--- a/bobura_core/bobura_core.vcxproj.filters
+++ b/bobura_core/bobura_core.vcxproj.filters
@@ -359,5 +359,8 @@
     <ClCompile Include="src\bobura.load_save.new_file.cpp">
       <Filter>sources\bobura\load_save</Filter>
     </ClCompile>
+    <ClCompile Include="src\bobura.load_save.save_to_file.cpp">
+      <Filter>sources\bobura\load_save</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
