--- a/bobura_core/src/Makefile.am
+++ b/bobura_core/src/Makefile.am
@@ -32,6 +32,7 @@ sources = \
     bobura.load_save.confirm_file_save.cpp \
     bobura.load_save.load_from_file.cpp \
     bobura.load_save.new_file.cpp \
+    bobura.load_save.save_to_file.cpp \
     bobura.main_window.cpp \
     bobura.main_window_menu_builder.cpp \
     bobura.oudia_diagram_dialog.cpp \
