Change the project bobura_model from header only lib to static lib #99

--- a/bobura_core/test/Makefile.am
+++ b/bobura_core/test/Makefile.am
@@ -75,7 +75,8 @@ EXTRA_DIST = $(extra_headers) $(extra_sources)
 TESTS = bobura_core.test
 
 bobura_core_test_DEPENDENCIES = \
-    $(top_builddir)/bobura_core/src/libbobura_core.a
+    $(top_builddir)/bobura_core/src/libbobura_core.a \
+    $(top_builddir)/bobura_core/src/libbobura_model.a
 bobura_core_test_CPPFLAGS = \
     -I$(top_srcdir)/bobura_core/include \
     -I$(top_srcdir)/bobura_model/include \
@@ -84,9 +85,11 @@ bobura_core_test_CPPFLAGS = \
     -I$(TETENGO2_GUI_INCLUDE)
 bobura_core_test_LDFLAGS = \
     -L$(top_builddir)/bobura_core/src \
+    -L$(top_builddir)/bobura_model/src \
     -L$(TETENGO2_LIB)
 bobura_core_test_LDADD = \
     -lbobura_core \
+    -lbobura_model \
     -ltetengo2 \
     $(UNITTEST_LIBS)
 bobura_core_test_SOURCES = $(headers) $(sources)
