Move the implementation of bobura::model::serializer::bzip2_reader to .cpp #99

--- a/bobura_model/src/Makefile.am
+++ b/bobura_model/src/Makefile.am
@@ -17,6 +17,7 @@ lib_LIBRARIES = libbobura_model.a
 EXTRA_DIST = $(extra_headers) $(extra_sources)
 
 libbobura_model_a_CPPFLAGS = \
+    -I$(top_srcdir)/bobura_core/include \
     -I$(top_srcdir)/bobura_model/include \
     -I$(TETENGO2_INCLUDE) \
     -I$(TETENGO2_DETAIL_INCLUDE) \
