--- a/bobura_model/bobura_model.vcxproj
+++ b/bobura_model/bobura_model.vcxproj
@@ -61,6 +61,7 @@
     <ClCompile Include="src\bobura.model.serializer.bzip2_reader.cpp" />
     <ClCompile Include="src\bobura.model.serializer.bzip2_writer.cpp" />
     <ClCompile Include="src\bobura.model.serializer.exec_json_reading_task.cpp" />
+    <ClCompile Include="src\bobura.model.serializer.json_reader.cpp" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <ProjectGuid>{E3D6C3EA-1A16-45EB-80A6-69B4AFAD366C}</ProjectGuid>
