--- a/bobura_model/src/Makefile.am
+++ b/bobura_model/src/Makefile.am
@@ -9,7 +9,8 @@ extra_headers =
 sources = \
     bobura.model.serializer.bzip2_reader.cpp \
     bobura.model.serializer.bzip2_writer.cpp \
-    bobura.model.serializer.exec_json_reading_task.cpp
+    bobura.model.serializer.exec_json_reading_task.cpp \
+    bobura.model.serializer.json_reader.cpp
 
 extra_sources =
 
