--- a/bobura_model/bobura_model.vcxproj.filters
+++ b/bobura_model/bobura_model.vcxproj.filters
@@ -149,5 +149,8 @@
     <ClCompile Include="src\bobura.model.serializer.json_reader.cpp">
       <Filter>sources\bobura::model\serializer</Filter>
     </ClCompile>
+    <ClCompile Include="src\bobura.model.serializer.json_writer.cpp">
+      <Filter>sources\bobura::model\serializer</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
