--- a/bobura_model/src/Makefile.am
+++ b/bobura_model/src/Makefile.am
@@ -11,7 +11,8 @@ sources = \
     bobura.model.serializer.bzip2_writer.cpp \
     bobura.model.serializer.exec_json_reading_task.cpp \
     bobura.model.serializer.json_reader.cpp \
-    bobura.model.serializer.json_writer.cpp
+    bobura.model.serializer.json_writer.cpp \
+    bobura.model.serializer.oudia_reader.cpp
 
 extra_sources =
 
