Move the source files #99

--- a/bobura_model/bobura_model.test.vcxproj
+++ b/bobura_model/bobura_model.test.vcxproj
@@ -110,6 +110,7 @@
     <ClCompile Include="test\test_bobura.model.serializer.exec_json_reading_task.cpp" />
     <ClCompile Include="test\test_bobura.model.serializer.json_reader.cpp" />
     <ClCompile Include="test\test_bobura.model.serializer.json_writer.cpp" />
+    <ClCompile Include="test\test_bobura.model.serializer.oudia_diagram_dialog.cpp" />
     <ClCompile Include="test\test_bobura.model.serializer.oudia_reader.cpp" />
     <ClCompile Include="test\test_bobura.model.serializer.reader.cpp" />
     <ClCompile Include="test\test_bobura.model.serializer.reader_selector.cpp" />
