--- a/bobura_model/include/bobura/Makefile.am
+++ b/bobura_model/include/bobura/Makefile.am
@@ -9,6 +9,7 @@ pkg_headers = \
     model/serializer/exec_json_reading_task.h \
     model/serializer/json_reader.h \
     model/serializer/json_writer.h \
+    model/serializer/oudia_diagram_dialog.h \
     model/serializer/oudia_reader.h \
     model/serializer/select_oudia_diagram.h \
     model/serializer/reader.h \
