--- a/bobura_model/bobura_model.test.vcxproj.filters
+++ b/bobura_model/bobura_model.test.vcxproj.filters
@@ -125,5 +125,8 @@
     <ClCompile Include="test\test_bobura.model.serializer.exec_json_reading_task.cpp">
       <Filter>sources\test_bobura::model\serializer</Filter>
     </ClCompile>
+    <ClCompile Include="test\test_bobura.model.serializer.oudia_diagram_dialog.cpp">
+      <Filter>sources\test_bobura::model\serializer</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
