--- a/bobura_model/bobura_model.vcxproj
+++ b/bobura_model/bobura_model.vcxproj
@@ -29,6 +29,7 @@
     <ClInclude Include="include\bobura\model\serializer\exec_json_reading_task.h" />
     <ClInclude Include="include\bobura\model\serializer\json_reader.h" />
     <ClInclude Include="include\bobura\model\serializer\json_writer.h" />
+    <ClInclude Include="include\bobura\model\serializer\oudia_diagram_dialog.h" />
     <ClInclude Include="include\bobura\model\serializer\oudia_reader.h" />
     <ClInclude Include="include\bobura\model\serializer\reader.h" />
     <ClInclude Include="include\bobura\model\serializer\reader_selector.h" />
@@ -63,6 +64,7 @@
     <ClCompile Include="src\bobura.model.serializer.exec_json_reading_task.cpp" />
     <ClCompile Include="src\bobura.model.serializer.json_reader.cpp" />
     <ClCompile Include="src\bobura.model.serializer.json_writer.cpp" />
+    <ClCompile Include="src\bobura.model.serializer.oudia_diagram_dialog.cpp" />
     <ClCompile Include="src\bobura.model.serializer.oudia_reader.cpp" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
