Move the source files #99

--- a/bobura_model/bobura_model.test.vcxproj
+++ b/bobura_model/bobura_model.test.vcxproj
@@ -104,6 +104,7 @@
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Create</PrecompiledHeader>
     </ClCompile>
     <ClCompile Include="test\master.cpp" />
+    <ClCompile Include="test\test_bobura.model.message.oudia_diagram_dialog.cpp" />
     <ClCompile Include="test\test_bobura.model.message.timetable_observer_set.cpp" />
     <ClCompile Include="test\test_bobura.model.serializer.bzip2_reader.cpp" />
     <ClCompile Include="test\test_bobura.model.serializer.bzip2_writer.cpp" />
