--- a/bobura_model/test/Makefile.am
+++ b/bobura_model/test/Makefile.am
@@ -10,6 +10,7 @@ extra_headers =
 
 sources = \
     master.cpp \
+    test_bobura.model.message.oudia_diagram_dialog.cpp \
     test_bobura.model.message.timetable_observer_set.cpp \
     test_bobura.model.serializer.bzip2_reader.cpp \
     test_bobura.model.serializer.bzip2_writer.cpp \
