--- a/bobura_model/bobura_model.vcxproj.filters
+++ b/bobura_model/bobura_model.vcxproj.filters
@@ -135,6 +135,9 @@
     <ClInclude Include="include\bobura\model\serializer\oudia_diagram_dialog.h">
       <Filter>headers\bobura::model\serializer</Filter>
     </ClInclude>
+    <ClInclude Include="include\bobura\model\message\oudia_diagram_dialog.h">
+      <Filter>headers\bobura::model\message</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="src\bobura.model.serializer.bzip2_reader.cpp">
