Move the implementation of bobura::model::serializer::reader to .cpp #99

--- a/bobura_model/src/Makefile.am
+++ b/bobura_model/src/Makefile.am
@@ -13,7 +13,8 @@ sources = \
     bobura.model.serializer.json_reader.cpp \
     bobura.model.serializer.json_writer.cpp \
     bobura.model.serializer.oudia_diagram_dialog.cpp \
-    bobura.model.serializer.oudia_reader.cpp
+    bobura.model.serializer.oudia_reader.cpp \
+    bobura.model.serializer.reader.cpp
 
 extra_sources =
 
