--- a/bobura_model/bobura_model.vcxproj
+++ b/bobura_model/bobura_model.vcxproj
@@ -67,6 +67,7 @@
     <ClCompile Include="src\bobura.model.serializer.json_writer.cpp" />
     <ClCompile Include="src\bobura.model.serializer.oudia_diagram_dialog.cpp" />
     <ClCompile Include="src\bobura.model.serializer.oudia_reader.cpp" />
+    <ClCompile Include="src\bobura.model.serializer.reader.cpp" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <ProjectGuid>{E3D6C3EA-1A16-45EB-80A6-69B4AFAD366C}</ProjectGuid>
