Move the implementation of bobura::serializer::reader_set to .cpp #99

--- a/bobura_model/bobura_model.vcxproj
+++ b/bobura_model/bobura_model.vcxproj
@@ -69,6 +69,7 @@
     <ClCompile Include="src\bobura.model.serializer.oudia_reader.cpp" />
     <ClCompile Include="src\bobura.model.serializer.reader.cpp" />
     <ClCompile Include="src\bobura.model.serializer.reader_selector.cpp" />
+    <ClCompile Include="src\bobura.model.serializer.reader_set.cpp" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <ProjectGuid>{E3D6C3EA-1A16-45EB-80A6-69B4AFAD366C}</ProjectGuid>
