--- a/bobura_model/bobura_model.vcxproj.filters
+++ b/bobura_model/bobura_model.vcxproj.filters
@@ -170,5 +170,8 @@
     <ClCompile Include="src\bobura.model.serializer.reader_selector.cpp">
       <Filter>sources\bobura::model\serializer</Filter>
     </ClCompile>
+    <ClCompile Include="src\bobura.model.serializer.reader_set.cpp">
+      <Filter>sources\bobura::model\serializer</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
