--- a/bobura_model/bobura_model.vcxproj
+++ b/bobura_model/bobura_model.vcxproj
@@ -70,6 +70,7 @@
     <ClCompile Include="src\bobura.model.serializer.reader.cpp" />
     <ClCompile Include="src\bobura.model.serializer.reader_selector.cpp" />
     <ClCompile Include="src\bobura.model.serializer.reader_set.cpp" />
+    <ClCompile Include="src\bobura.model.serializer.select_oudia_diagram.cpp" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <ProjectGuid>{E3D6C3EA-1A16-45EB-80A6-69B4AFAD366C}</ProjectGuid>
