--- a/bobura_model/bobura_model.vcxproj.filters
+++ b/bobura_model/bobura_model.vcxproj.filters
@@ -179,5 +179,8 @@
     <ClCompile Include="src\bobura.model.serializer.windia_reader.cpp">
       <Filter>sources\bobura::model\serializer</Filter>
     </ClCompile>
+    <ClCompile Include="src\bobura.model.serializer.writer.cpp">
+      <Filter>sources\bobura::model\serializer</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
